feat: routing, nav bar , basic css, basic data extraction page

--- a/research-app/src/App.css
+++ b/research-app/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: rgb(77,88,110);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,41 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+*{ 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* font-family: 'Lato',sans-serif; */
+}
+
+
+/* .DataExtraction, .Home, .FashionProfiler{
+  display: flex;
+  height: 0vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+} */
+
+.header{
+  display: flex;
+  /* min-width: 3000px; */
+  position: fixed;
+  z-index: 1;
+  width: 100vw;
+}
+
+.Rname1{
+  /* height: 40px; */
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif, cursive ;
+  font-style: italic;
+  width: 100%;
+  background-color: rgb(35, 35, 35);
+
 }
