--- a/research-app/src/Components/FashionProfiler/FashionProfiler.css
+++ b/research-app/src/Components/FashionProfiler/FashionProfiler.css
@@ -1,8 +1,8 @@
 /* FashionProfiler.css */
 
 .FPMain {
-    background-color: rgb(241, 102, 94);
-    color: #f5f5f5;
+    background-color: rgb(255, 190, 186);
+    color: #ffffff;
     padding: 20px;
     height: 90vh;
 
