--- a/research-app/src/Components/FashionProfiler/FashionProfiler.css
+++ b/research-app/src/Components/FashionProfiler/FashionProfiler.css
@@ -25,10 +25,11 @@
     margin-top: 40px;
     background-color: #333;
     border-radius: 10px;
-    height:50vh;
+    height: 70vh;
     width: 50vw;
     padding-top: 20px;
     margin-left: 25%;
+    overflow-y: scroll;
 }
 
 .FpH2 {
@@ -37,14 +38,56 @@
     text-align: center;
 }
 
+
+
+.FPFormSubmitButton {
+    background-color: rgb(77, 88, 110);
+    color: #f5f5f5;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.FPFormSubmitButton:hover {
+    background-color: #333;
+}
+
+
 .FPImageUploaderForm {
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* background-color: greenyellow; */
+}
+.FPImageContainer {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    flex-direction: column;
 }
 
+.FPImageWrapper {
+    width: 40% ;/* Adjust as needed */
+    height: 40%; /* Adjust as needed */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+.FPSelectedImage {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: auto;
+}
 .FPImageInput {
-    margin-bottom: 10px;
+    margin: 10px;
     border: 2px solid #f5f5f5;
     padding: 10px;
     border-radius: 8px;
@@ -61,16 +104,4 @@
     background-color: rgba(255, 255, 255, 0.2);
 }
 
-.FPFormSubmitButton {
-    background-color: rgb(77, 88, 110);
-    color: #f5f5f5;
-    border: none;
-    padding: 10px 20px;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-.FPFormSubmitButton:hover {
-    background-color: #333;
-}
 
