--- a/research-app/src/Components/Recommender/RecommendDialog.css
+++ b/research-app/src/Components/Recommender/RecommendDialog.css
@@ -52,7 +52,7 @@
 
 .RecommendSpinner {
     border: 4px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #3f51b5; /* Choose your desired color */
+    border-left-color:rgb(241, 102, 94); /* Choose your desired color */
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -70,4 +70,24 @@
 
 .RecDialogLoading{
     color: rgb(241, 102, 94);
+}
+
+.RecommendInputLabel{
+    margin: 10px;
+    /* width: 80%; */
+    /* max-width: 300px; */
+    color: #f5f5f5;
+    font-size: 16px;
+}
+
+.RecommendInput{
+    margin: 10px;
+    border: 2px solid #f5f5f5;
+    padding: 10px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 300px;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #f5f5f5;
+    font-size: 16px;
 }
