--- a/research-app/src/Components/Recommender/Recommender.css
+++ b/research-app/src/Components/Recommender/Recommender.css
@@ -3,7 +3,8 @@
     /* color: rgb(35, 35, 35); */
     padding: 20px;
     font-family: Arial, sans-serif;
-    height: 100vh;
+    height: 100%;
+    padding-bottom: 50px;
 
 }
 
