--- a/research-app/src/Components/Login/Login.css
+++ b/research-app/src/Components/Login/Login.css
@@ -26,6 +26,7 @@
     border-radius: 5px;
     background-color: rgb(77, 88, 110);
     color: #f5f5f5;
+    margin-top: 10px;
   }
   
   .LoginButton {
@@ -36,6 +37,7 @@
     color: #f5f5f5;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin: 10px;
   }
   
   .LoginButton:hover {
@@ -46,3 +48,15 @@
     color: #f5f5f5;
   }
   
+  .LoginSignupText{
+    color: whitesmoke;
+    /* padding-top: 10px; */
+  }
+
+  .LoginSignupButton{
+    text-decoration: underline;
+    outline: none;
+    background: none;
+    border: none;
+    color: #f56751;
+  }
